[package]
name = "syncstream"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.36", features = ["futures-io", "zstd"] }
blake3 = "1.8.2"
futures-util = "0.3.31"
hex = "0.4.3"
nix = { version = "0.30.1", features = ["fs"] }
reqwest = "0.12.24"
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
zstd = "0.13.3"

[dev-dependencies]
httpmock = "0.8.2"
temp-dir = "0.1.16"
tokio = { version = "1.48.0", features = ["macros"] }
